--- a/src/styles/answer.css
+++ b/src/styles/answer.css
@@ -39,7 +39,7 @@
 
 .answer .answer-text p {
 	color: #fff;
-	font-size: 20px;
+	font-size: 1rem;
 	padding-left: 15px;
 }
 
