--- a/src/styles/answerpopup.css
+++ b/src/styles/answerpopup.css
@@ -30,7 +30,7 @@
 .answer-popup__correct {
 	background-color: #fff;
 	color: #000;
-	padding: 30px 0;
+	padding: 30px 5px;
 	font-size: 1.25rem;
 }
 
